HorizontalButtonGroup now can display button groups that do not fill all the horizontal space. Fix on button theme style to fix a bad wrapping size.

--- a/abcd-gui/src/main/webapp/VAADIN/themes/abcd/abcd.scss
+++ b/abcd-gui/src/main/webapp/VAADIN/themes/abcd/abcd.scss
@@ -22,8 +22,11 @@ $blueShadowColor: #52A5C5;
 
   /* Insert your theme rules here */
   
+  	.v-horizontal-button-group {
+		background-color: white;
+	}
+  
   	.v-horizontal-button-group .v-button-wrap {
-		width: inherit;
 		height: inherit;
 	}
   	.v-horizontal-button-group .v-icon {
